# GoUL

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/goul/: __init__.py  cellular_field.py  goul.py  goul_main_window.py  main_window.py  toolbar.qml
src/goul/games/: __init__.py  conways_game_of_life.py  game1.py  game2.py  game_base.py  game_state.py  gamebase.py  stochastic_game_of_life.py
src/goul/ui/: cellular_field.py  main_toolbar.py  main_window.py
